test/compile-errors/extern-warnings.crow
main void()
	()

f void() bare, c extern

f void() unsafe, c extern
